--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "private": true,
   "devDependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-refresh": "^0.8.1"
+    "karma": "6.4.2",
+    "karma-chrome-launcher": "3.2.0",
+    "karma-cljs-test": "0.1.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-refresh": "0.8.1"
+  },
+  "scripts": {
+    "test": "karma start --single-run"
   }
 }
